[tool.poetry]
name = "cvapi"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
marshmallow = "^3.2"
flask-marshmallow = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
behave = "^1.2"
requests = "^2.22"
ipdb = "^0.12.2"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
